# Paimon

./: Cargo.toml
paimon-libusb/: .gitmodules  Cargo.toml  build.rs
paimon-libusb/resources/: hotplug.cpp
paimon-libusb/src/: config_descriptor.rs  constants.rs  context.rs  device.rs  device_descriptor.rs  device_handle.rs  device_list.rs  endpoint_descriptor.rs  error.rs  fields.rs  hotplug.rs  interface_descriptor.rs  language.rs  lib.rs  libusb.rs  options.rs  test_helpers.rs  version.rs
src/: main.rs  usb_listener.rs
