[package]
name = "paimon-libusb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "/exaples",
    "/libusb/libusb",
    "/libusb/msvc",
    "/src/*",
    "/tests",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "COPYING",
    "AUTHORS",
]


build = "build.rs"

[features]
vendored = []

[dependencies]
libc = "0.2.139"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"